--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@react-native-firebase/auth": "^22.1.0",
     "@react-native-google-signin/google-signin": "^13.2.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
