--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@react-native-firebase/app": "^22.1.0",
     "@react-native-firebase/auth": "^22.1.0",
     "@react-native-google-signin/google-signin": "^13.2.0",
+    "axios": "^1.9.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
