--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native-firebase/app": "^22.1.0",
     "@react-native-firebase/auth": "^22.1.0",
     "@react-native-google-signin/google-signin": "^13.2.0",
+    "@react-navigation/native-stack": "^7.3.14",
     "axios": "^1.9.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
