--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://bhavjotkaur12:UmHquUu3R4sUxHLd@cluster0.thczf1o.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://bhavjotkaur12:Qwerty123@cluster0.thczf1o.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=mysupersecretkey123!
 EMAIL_USER=outfitiq123@gmail.com
 EMAIL_PASS=jqyjzaahdrobbwsn
